Fix row overflow bug

--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,15 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  width: 100vw;
   height: 100vh;
+  width: 100vw;
 }
 
 #container {
   display: flex;
   flex-direction: column;
-  width: 50%;
-  height: 50%;
+  width: 30vw;
+  height: 30vw;
   box-shadow: 3px 3px 10px;
 }
 
